ensured the label won't wrap in the count card component

--- a/client/src/app/components/statistics/count-card/count-card.component.scss
+++ b/client/src/app/components/statistics/count-card/count-card.component.scss
@@ -27,5 +27,6 @@
   .count-card-label {
     font-size: 1.125rem;
     opacity: 0.8;
+    white-space: nowrap;
   }
 }
